<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Qarap Kor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="title_activity_optional" tools:ignore="MissingTranslation">OptionalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" tools:ignore="MissingTranslation">First Fragment</string>
    <string name="second_fragment_label" tools:ignore="MissingTranslation">Second Fragment</string>
    <string name="next" tools:ignore="MissingTranslation">Next</string>
    <string name="previous" tools:ignore="MissingTranslation">Previous</string>
    <string name="unuseful_auth" tools:ignore="MissingTranslation">User no log in</string>
    <string name="errorFormatKZ" tools:ignore="MissingTranslation"> Қате формат</string>
    <string name="barlygy" tools:ignore="MissingTranslation">Барлығы</string>
    <string name="password" tools:ignore="MissingTranslation">Сіздің құпия сөзіңіз</string>
    <string name="MyProfile">Meнің профилім</string>
    <string name="ZhekeDerekter">Жеке деректер</string>
    <string name="KupiaSozdiOzgertu">Құпия сөзді өзгерту</string>
    <string name="language">Тіл</string>
    <string name="QarangyReazhim">Қараңғы режим</string>
    <string name="Ondeu">Өңдеу</string>
    <string name="Profile">Профиль</string>
    <string name="year">ж.</string>
    <string name="January">Қаңтар</string>
    <string name="February">Ақпан</string>
    <string name="March">Наурыз</string>
    <string name="April">Сәуір</string>
    <string name="May">Мамыр</string>
    <string name="June">Маусым</string>
    <string name="July">Шілде</string>
    <string name="August">Тамыз</string>
    <string name="September">Қыркүйек</string>
    <string name="October">Қазан</string>
    <string name="November">Қараша</string>
    <string name="December">Желтоқсан</string>
    <string name="ChooceGenre">Жанрды таңдаңыз</string>
    <string name="exit">Шығу</string>
    <string name="question">Сіз шынымен аккаунтыңыздан</string>
    <string name="yesExit">Иә, шығу</string>
    <string name="No">Жоқ</string>
    <string name="SelectDate">Туылған күніңізді таңдаңыз</string>
</resources>