<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".presentation.ui.fragmentMain.ProfileFragment">

    <View
        android:id="@+id/back_background_view"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/icon_profile_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sf_bold"
        android:text="@string/MyProfile"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:textColor="?attr/colorOnPrimary"
        />

    <TextView
        android:id="@+id/textTvEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@+id/back_background_view"
        app:layout_constraintStart_toStartOf="@+id/back_background_view"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:fontFamily="@font/sf_regular"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/text10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/back_background_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/ZhekeDerekter"
        android:fontFamily="@font/sf_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/btnInfoTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/text10"
        app:layout_constraintEnd_toStartOf="@id/btnImgJekeDerekter"
        android:text="@string/Ondeu"
        android:layout_marginEnd="8dp"
        android:textColor="@color/grey_400"

        />

    <ImageButton
        android:id="@+id/btnImgJekeDerekter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_style_profile_left_icon"
        app:layout_constraintBottom_toBottomOf="@id/btnInfoTransaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text10" />
    <View
        android:id="@+id/btnChangePassword1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/textChangePassword"
        app:layout_constraintBottom_toBottomOf="@id/textChangePassword"
        app:layout_constraintEnd_toStartOf="@id/btnChangePassword2"
        />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/divider_1dp_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/text10"

        app:layout_constraintTop_toBottomOf="@id/text10" />

    <TextView
        android:id="@+id/textChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sf_medium"
        android:text="@string/KupiaSozdiOzgertu"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/text10"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <ImageButton
        android:id="@+id/btnChangePassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_style_profile_left_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textChangePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textChangePassword" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/divider_1dp_grey"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="@id/text10"
        app:layout_constraintTop_toBottomOf="@+id/textChangePassword" />

    <TextView
        android:id="@+id/text13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sf_medium"
        android:text="@string/language"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/text10"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <TextView
        android:id="@+id/textTvSelectLanguageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/text13"
        android:textColor="@color/grey_400"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectLanguageIcon"
        app:layout_constraintTop_toTopOf="@+id/text13" />

    <ImageButton
        android:id="@+id/btnSelectLanguageIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_style_profile_left_icon"
        app:layout_constraintBottom_toBottomOf="@+id/text13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text13" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/divider_1dp_grey"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="@id/text10"
        app:layout_constraintTop_toBottomOf="@+id/text13" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sf_medium"
        android:text="@string/QarangyReazhim"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/text10"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />
    <com.kyleduo.switchbutton.SwitchButton
        style="@style/SwitchButtonStyle"
        app:kswThumbColor="@color/white"
        android:layout_width="67dp"
        android:layout_height="36dp"
        android:checked="true"
        app:kswTintColor="#0E5AA4"
        android:id="@+id/day_night_switch"
        app:kswBackColor="?attr/track"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/text3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text3"
        />

</androidx.constraintlayout.widget.ConstraintLayout>